experimental support for setting thinking effort in openrouter and google apis
